--- a/task-management/angular-project/src/app/task/components/create-task/create-task.component.html
+++ b/task-management/angular-project/src/app/task/components/create-task/create-task.component.html
@@ -5,10 +5,18 @@
             <div class="card-body">
                
               <h5 class="card-title">Create Task</h5>
-              <label for="usr"style="padding:5px;">Task Name:</label>
-            <input type="text"style="margin-right:20px;" [(value)]="task.taskName"/>
-            <label for="usr" style="padding:5px;">Task Date:</label>
-            <input type="date" [(value)]="task.taskDate" />
+              <div class="form-group">
+                <label for="taskName">Name</label>
+                <input type="text" class="form-control" id="taskName"
+                       required
+                       [(ngModel)]="task.taskName" name="taskName">
+              </div>
+              
+              <div class="form-group">
+                <label for="taskDate">Task Date</label>
+                <input type="date"  class="form-control" id="taskDate"
+                       [(ngModel)]="task.taskDate" name="taskDate">
+              </div>
               <div class="d-grid gap-2 d-md-flex justify-content-md-end">
                 <button class="btn btn-secondary me-md-2" type="button" style="margin-right:5px;" (click)="cancel()">Cancel</button>
                 <button class="btn btn-primary" type="button"(click)="createTask()">Create</button>
