--- a/task-management/angular-project/src/app/task/components/list-task/list-task.component.html
+++ b/task-management/angular-project/src/app/task/components/list-task/list-task.component.html
@@ -1,14 +1,14 @@
 
  <div class="container" style="height:70vh;width:50%;padding:20px;border:solid 5px;">
-  
+  <div>{{message}}</div>
     <div class="row" style="height:50vh;">
-        <div>{{message}}</div>
+       
       <div class="col-sm">
         <div class="card" style="overflow-y:auto">
             <div class="card-body">
                 <button style="float:right" (click)="createTask()"><i class="bi bi-calendar-plus"></i></button>
               <h5 class="card-title">Task List</h5>
-              <ng-container *ngIf="this.taskList.length!==0">
+              <ng-container *ngIf="taskList !== undefined && taskList.length!==0">
                 <div class="list-group">
                     <ng-container *ngFor="let t of taskList;let i = index;">
                     <button type="button" [ngClass]="t.selected ? 'list-group-item list-group-item-action active ' : 'list-group-item list-group-item-action'"(click)="selectTask(t)">
@@ -24,7 +24,7 @@
         <div class="card">
             <div class="card-body">
               <h5 class="card-title">Task</h5>
-              <app-task-item [selectedTask]="selectedTask" (updateSelectedTask)="updateSelectedTask($event)"></app-task-item>
+              <app-task-item [selectedTask]="selectedTask" (updateSelectedTask)="updateSelectedTask($event)" ></app-task-item>
             </div>
           </div>
      
