--- a/task-management/angular-project/src/app/task/components/task-item/task-item.component.html
+++ b/task-management/angular-project/src/app/task/components/task-item/task-item.component.html
@@ -1,3 +1,5 @@
 {{selectedTask.taskName}}
-{{selectedTask.taskDate | date:'short'}}
-<button style="float:right" (click)="deleteTask()"><i class="bi bi-trash-fill"></i></button>
+{{selectedTask.taskDate | date:'shortDate'}}
+<button style="float:right"  (click)="deleteTask()"><i class="bi bi-trash-fill"></i></button>
+<button style="float:right" (click)="updateTask()"[disabled]="disableUpdate"><i class="bi bi-check2-circle"></i></button>
+ 
