--- a/task-management/angular-project/src/app/task/components/task/task.component.html
+++ b/task-management/angular-project/src/app/task/components/task/task.component.html
@@ -6,7 +6,7 @@
           
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="bi bi-person"></i>
+                <i class="bi bi-person fa-2x"></i>
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item" >{{user}}</a>
