changes for style of task

--- a/task-management/angular-project/src/app/task/components/list-task/list-task.component.html
+++ b/task-management/angular-project/src/app/task/components/list-task/list-task.component.html
@@ -1,10 +1,10 @@
 
- <div class="container" style="height:70vh;width:50%;padding:20px;border:solid 5px;">
+ <div class="container" style="height:85vh;width:50%;padding:20px;border:solid 5px;">
   <div>{{message}}</div>
-    <div class="row" style="height:50vh;">
+    <div class="row">
        
       <div class="col-sm">
-        <div class="card" style="overflow-y:auto">
+        <div class="card" style="overflow-y:auto;height:70vh">
             <div class="card-body">
                 <button style="float:right" (click)="createTask()"><i class="bi bi-calendar-plus"></i></button>
               <h5 class="card-title">Task List</h5>
